Disabled zoom. All text is big enough, so zoom on mobile won't be needed. It just made a lot of things very difficult. Fix bug, where the skills weren't working anymore after more than 1 touch event happened at the same time. Burger menu is fixed again. As zoom is disabled this will not cause errors as before.

--- a/style/fallback/components/burger-menu/burger-menu-handle.scss
+++ b/style/fallback/components/burger-menu/burger-menu-handle.scss
@@ -1,5 +1,9 @@
 .burger-menu-handle-wrapper {
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  z-index: 1999;
 
   width: 25vmin;
   max-width: 25%;
